5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1752_3095.log
== TEST (2019-05-16 17:15:12) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 3
e = 2
d = 1

while(resultado != x):
	if(upper().resultado == "v"):
		v = v + 3
		print(v)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(resultado != x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:15:23) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 3
e = 2
d = 1

while(resultado != "x"):
	if(upper().resultado == "v"):
		v = v + 3
		print(v)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(upper().resultado == "v"):
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:15:50) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 3
e = 2
d = 1

while(resultado != "x"):
	if(upper().resultado == "v"):
		v = v + 3
		print(v)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(upper().resultado == "v"):
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:31) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 3
e = 2
d = 1

while(resultado != "x"):
	if(resultado == "v"):
		v = v + 3
		print(v)	
	
	resultado = input("Resultado da partida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:52) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 3
e = 2
d = 1

while(resultado != "x"):
	if(resultado == "v"):
		v = v 
		print(v)	
	
	resultado = input("Resultado da partida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:03) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 2
d = 1

while(resultado != "x"):
	if(resultado == "v"):
		v = v + 3 
		print(v)	
	
	resultado = input("Resultado da partida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:16) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	if else(resultado == "e" or resultado == "E"):
		e = e + 2
	if else(resultado == "d" or resultado == "D" ):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    if else(resultado == "e" or resultado == "E"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:21) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	ifelse(resultado == "e" or resultado == "E"):
		e = e + 2
	ifelse(resultado == "d" or resultado == "D" ):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:29) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	ifelse(resultado == "e" or resultado == "E"):
		e = e + 2
	ifelse(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:33) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	ifelse(resultado == "e" or resultado == "E"):
		e = e + 2
	ifelse(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:43) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	if(resultado == "e" or resultado == "E"):
		e = e + 2
	if(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:22) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	ifelse(resultado == "e" or resultado == "E"):
		e = e + 2
	ifelse(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:31) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
		ifelse(resultado == "e" or resultado == "E"):
			e = e + 2
		ifelse(resultado == "d" or resultado == "D"):
			d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:38) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	ifelse(resultado == "e" or resultado == "E"):
		e = e + 2
	ifelse(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
File "XXXX", line 11
    ifelse(resultado == "e" or resultado == "E"):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:21:12) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
		print(v)	
	elif(resultado == "e" or resultado == "E"):
		e = e + 2
	elif(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:21:28) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
	elif(resultado == "e" or resultado == "E"):
		e = e + 2
	elif(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:21:52) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
	elif(resultado == "e" or resultado == "E"):
		e = e + 2
	elif(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- EXECUTION TIME:
0.149522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 15, in <module>
    resultado = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:22:10) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x" or resultado != "X"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
	elif(resultado == "e" or resultado == "E"):
		e = e + 2
	elif(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    resultado = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:22:12) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado != "x" or resultado != "X"):
	if(resultado == "v" or resultado == "V"):
		v = v + 3 
	elif(resultado == "e" or resultado == "E"):
		e = e + 2
	elif(resultado == "d" or resultado == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- EXECUTION TIME:
0.154945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3095/main.py", line 15, in <module>
    resultado = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:12) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado.upper() != "X"):
	if(resultado.upper() == "V"):
		v = v + 3 
	elif(resultado.upper() == "E"):
		e = e + 2
	elif(resultado.upper() == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- OUTPUT:
6
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:23:53) 
-- CODE:
resultado = input("Resultado da partida: ")

v = 0
e = 0
d = 0

while(resultado.upper() != "X"):
	if(resultado.upper() == "V"):
		v = v + 3 
	elif(resultado.upper() == "E"):
		e = e + 2
	elif(resultado.upper() == "D"):
		d = d + 1
		
	resultado = input("Resultado da partida: ")
	
print(v)
print(e)
print(d)
-- EXECUTION TIME:
0.144493
-- TEST CASE 1:
---- input:
v
V
E
D
D
a
b
c
d
X
---- correct output:
6
2
3
---- user output:
6
2
3
-- TEST CASE 2:
---- input:
V
E
C
B
A
X
---- correct output:
3
2
0
---- user output:
3
2
0
-- TEST CASE 3:
---- input:
A
A
v
v
V
V
X
---- correct output:
12
0
0
---- user output:
12
0
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
